--- a/GitHubExtension/View/EditIssue.xaml
+++ b/GitHubExtension/View/EditIssue.xaml
@@ -34,20 +34,49 @@
         </xctk:CheckComboBox>
 
         <Label DockPanel.Dock="Top" Content="Assignee" Style="{StaticResource Label}"/>
-        <ComboBox 
-            DockPanel.Dock="Top" 
-            Style="{StaticResource ComboBox}" 
-            DisplayMemberPath="Login"
-            ItemsSource="{Binding Path=Assignees}"
-            SelectedValue="{Binding Path=Assignee}" />
+        <DockPanel DockPanel.Dock="Top" Style="{StaticResource ComboBoxDockPanel}">
+            <Button 
+                DockPanel.Dock="Right"
+                Command="{Binding Path=ClearAssigneeCommand}"
+                Content="&#xf05c;"
+                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontSize="22" 
+                Width="30" Height="30" 
+                Foreground="#FF333333" 
+                Margin="6,0,0,0" 
+                ToolTip="Clear Assignee"/>
+            <ComboBox 
+                DockPanel.Dock="Right" 
+                Style="{StaticResource ComboBox}" 
+                DisplayMemberPath="Login"
+                ItemsSource="{Binding Path=Assignees}"
+                SelectedValue="{Binding Path=Assignee}" />
+        </DockPanel>
 
         <Label DockPanel.Dock="Top" Content="Milestone" Style="{StaticResource Label}"/>
-        <ComboBox 
+        <!--
+        <DockPanel DockPanel.Dock="Top" Style="{StaticResource ComboBoxDockPanel}">
+            <Button 
+                DockPanel.Dock="Right"
+                Command="{Binding Path=ClearMilestoneCommand}"
+                Content="&#xf05c;"
+                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontSize="22" 
+                Width="30" Height="30" 
+                Foreground="#FF333333" 
+                Margin="6,0,0,0" 
+                ToolTip="Clear Assignee"/>
+        -->
+            <ComboBox 
             DockPanel.Dock="Top" 
+            Margin="12,3,12,0"
             Style="{StaticResource ComboBox}"
             ItemTemplate="{StaticResource MilestoneTemplate}"
             ItemsSource="{Binding Path=Milestones}"
             SelectedValue="{Binding Path=Milestone}" />
+        <!--
+        </DockPanel>
+        -->
 
         <Label DockPanel.Dock="Top" Content="Description" Style="{StaticResource Label}"/>
 
