--- a/GitHubExtension/View/LightTheme.xaml
+++ b/GitHubExtension/View/LightTheme.xaml
@@ -57,10 +57,13 @@
         <Setter Property="Height" Value="30" />
     </Style>
 
+    <Style x:Key="ComboBoxDockPanel" TargetType="{x:Type DockPanel}" >
+        <Setter Property="Margin" Value="12,3,12,0"/>
+    </Style>
+
     <Style x:Key="ComboBox" TargetType="{x:Type ComboBox}" >
         <Setter Property="Foreground" Value="#333" />
         <Setter Property="FontSize" Value="12pt" />
-        <Setter Property="Margin" Value="12,3,12,0"/>
         <Setter Property="Height" Value="30" />
     </Style>
 
