--- a/GitHubExtension/View/IssueControl.xaml
+++ b/GitHubExtension/View/IssueControl.xaml
@@ -4,7 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:wpf="clr-namespace:Alteridem.GitHub.Extension.View"
+             xmlns:view="clr-namespace:Alteridem.GitHub.Extension.View"
              xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance viewModel:IssueViewModel}"
@@ -49,14 +49,15 @@
         <Label Grid.Row="4" Grid.Column="2" Content="Entered:" />
         <Label Grid.Row="4" Grid.Column="3" Content="{Binding Path=Issue.CreatedAt.Date,StringFormat=d}" />
 
-        <Border x:Name="_htmlView" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="{DynamicResource {x:Static wpf:Theme.ControlBorderKey}}" BorderThickness="1" Padding="0">
-            <WebBrowser OpacityMask="White" ScrollViewer.VerticalScrollBarVisibility="Auto" wpf:WebBrowserBehavior.Html="{Binding Path=IssueMarkdown, Converter={StaticResource MarkdownConverter}}" />
+        <Border x:Name="_htmlView" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}" BorderThickness="1" Padding="0">
+            <WebBrowser OpacityMask="White" ScrollViewer.VerticalScrollBarVisibility="Auto" view:WebBrowserBehavior.Html="{Binding Path=IssueMarkdown, Converter={StaticResource MarkdownConverter}}" />
         </Border>
 
         <DockPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" LastChildFill="False">
             <Button 
                 DockPanel.Dock="Right"
                 Command="{Binding Path=AddCommentCommand}"
+                CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=view:IssueControl}}"
                 Content="&#xf075;"
                 FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
                 FontSize="16" 
@@ -66,6 +67,7 @@
             <Button 
                 DockPanel.Dock="Right"
                 Command="{Binding Path=EditIssueCommand}"
+                CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=view:IssueControl}}"
                 Content="&#xf15c;"
                 FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
                 FontSize="16" 
