--- a/GitHubExtension/View/AddComment.xaml
+++ b/GitHubExtension/View/AddComment.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Alteridem.GitHub.Extension.View.AddComment"
+﻿<platformUi:DialogWindow x:Class="Alteridem.GitHub.Extension.View.AddComment"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,18 +6,19 @@
         xmlns:view="clr-namespace:Alteridem.GitHub.Extension.View"
         xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub"
         xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
+        xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
         WindowStartupLocation="CenterOwner"
         Title="Add Comment"
         Height="500" Width="500" 
         Foreground="#FF333333" 
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance viewModel:AddCommentViewModel}">
-    <Window.Resources>
+    <platformUi:DialogWindow.Resources>
         <converters:MarkdownConverter x:Key="MarkdownConverter" />
         <Style x:Key="FontAwesome">
             <Setter Property="TextElement.FontFamily" Value="/GitHubExtension;Component/Fonts/#FontAwesome" />
         </Style>
-    </Window.Resources>
+    </platformUi:DialogWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="62" />
@@ -70,4 +71,4 @@
                 Margin="3,6,3,6" />
         </DockPanel>
     </Grid>
-</Window>
+</platformUi:DialogWindow>
