--- a/GitHubExtension/View/Login.xaml
+++ b/GitHubExtension/View/Login.xaml
@@ -1,9 +1,11 @@
-﻿<Window x:Class="Alteridem.GitHub.Extension.View.LoginDialog"
+﻿<platformUi:DialogWindow 
+        x:Class="Alteridem.GitHub.Extension.View.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
+        xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.12.0"
         Title="Login to GitHub" 
         Height="206" Width="300" 
         Foreground="#FF333333" 
@@ -14,11 +16,11 @@
         AllowsTransparency="True"
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance viewModel:LoginViewModel}" >
-    <Window.Resources>
+    <platformUi:DialogWindow.Resources>
         <Style x:Key="FontAwesome">
             <Setter Property="TextElement.FontFamily" Value="/GitHubExtension;Component/Fonts/#FontAwesome" />
         </Style>
-    </Window.Resources>
+    </platformUi:DialogWindow.Resources>
     <Border Background="White" CornerRadius="12">
         <Grid Margin="0,0,0,-5">
             <Grid.RowDefinitions>
@@ -38,17 +40,17 @@
             <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="24" Text="Login to GitHub" />
 
             <TextBlock Grid.Column="0" Grid.Row="1" Text="Username:" VerticalAlignment="Center" Margin="6,10" Height="16" />
-            <TextBox x:Name="UserText" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="GitHub username or email address" Margin="6" Text="{Binding Path=Username, Mode=OneWayToSource}"/>
+            <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="GitHub username or email address" Margin="6" Text="{Binding Path=Username, Mode=OneWayToSource}"/>
 
             <TextBlock Grid.Column="0" Grid.Row="2" Text="Password:" VerticalAlignment="Center" Margin="6,10" Height="16" />
-            <PasswordBox x:Name="PassText" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" ToolTip="Password"  Margin="6" />
+            <PasswordBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" ToolTip="Password"  Margin="6" />
 
-            <TextBlock x:Name="Message" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Margin="6,6,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{Binding Path=Message, Mode=OneWay}"/>
+            <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Margin="6,6,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{Binding Path=Message, Mode=OneWay}"/>
 
             <DockPanel Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Right">
-                <Button x:Name="Login" Content="Login" Command="{Binding Path=LogonCommand}" CommandParameter="{Binding ElementName=PassText}" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6" />
-                <Button x:Name="Cancel" Content="Cancel" IsCancel="True" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,6,6,6" />
+                <Button Content="Login" Command="{Binding Path=LogonCommand}" CommandParameter="{Binding ElementName=PassText}" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6" />
+                <Button Content="Cancel" IsCancel="True" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,6,6,6" />
             </DockPanel>
         </Grid>
     </Border>
-</Window>
+</platformUi:DialogWindow>
