--- a/GitHubExtension/View/Issue.xaml
+++ b/GitHubExtension/View/Issue.xaml
@@ -1,5 +1,4 @@
-﻿<UserControl x:Name="Issue"
-             x:Class="Alteridem.GitHub.Extension.View.IssueControl"
+﻿<UserControl x:Class="Alteridem.GitHub.Extension.View.Issue"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -49,7 +48,7 @@
         <Label Grid.Row="4" Grid.Column="2" Content="Entered:" />
         <Label Grid.Row="4" Grid.Column="3" Content="{Binding Path=Issue.CreatedAt.Date,StringFormat=d}" />
 
-        <Border x:Name="_htmlView" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}" BorderThickness="1" Padding="0">
+        <Border Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}" BorderThickness="1" Padding="0">
             <WebBrowser OpacityMask="White" ScrollViewer.VerticalScrollBarVisibility="Auto" view:WebBrowserBehavior.Html="{Binding Path=IssueMarkdown, Converter={StaticResource MarkdownConverter}}" />
         </Border>
 
