--- a/GitHubExtension/View/Login.xaml
+++ b/GitHubExtension/View/Login.xaml
@@ -43,7 +43,7 @@
             <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="GitHub username or email address" Margin="6" Text="{Binding Path=Username, Mode=OneWayToSource}"/>
 
             <TextBlock Grid.Column="0" Grid.Row="2" Text="Password:" VerticalAlignment="Center" Margin="6,10" Height="16" />
-            <PasswordBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" ToolTip="Password"  Margin="6" />
+            <PasswordBox x:Name="PassText" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" ToolTip="Password"  Margin="6" />
 
             <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Margin="6,6,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{Binding Path=Message, Mode=OneWay}"/>
 
