--- a/GitHubExtension/View/IssueEditor.xaml
+++ b/GitHubExtension/View/IssueEditor.xaml
@@ -41,7 +41,7 @@
                 DockPanel.Dock="Right"
                 Command="{Binding Path=ClearAssigneeCommand}"
                 Content="&#xf05c;"
-                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
                 FontSize="22" 
                 Width="30" Height="30" 
                 Foreground="#FF333333" 
@@ -62,7 +62,7 @@
                 DockPanel.Dock="Right"
                 Command="{Binding Path=ClearMilestoneCommand}"
                 Content="&#xf05c;"
-                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
                 FontSize="22" 
                 Width="30" Height="30" 
                 Foreground="#FF333333" 
