--- a/GitHubExtension/View/Issue.xaml
+++ b/GitHubExtension/View/Issue.xaml
@@ -57,7 +57,7 @@
                 DockPanel.Dock="Right"
                 Command="{Binding Path=AddCommentCommand}"
                 Content="&#xf075;"
-                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
                 FontSize="16" 
                 Width="30" Height="30" 
                 Margin="6px" 
@@ -66,7 +66,7 @@
                 DockPanel.Dock="Right"
                 Command="{Binding Path=EditIssueCommand}"
                 Content="&#xf15c;"
-                FontFamily="/GitHubExtension;Component/Fonts/#FontAwesome"
+                FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
                 FontSize="16" 
                 Width="30" Height="30" 
                 Margin="6px" 
